updated notebooks and interface

--- a/technical_report_function_tests.ipynb
+++ b/technical_report_function_tests.ipynb
@@ -20,7 +20,7 @@
      "output_type": "stream",
      "text": [
       "Ultralytics YOLOv8.0.207  Python-3.11.5 torch-2.0.1+cu118 CUDA:0 (NVIDIA GeForce RTX 4090, 24564MiB)\n",
-      "Setup complete  (24 CPUs, 63.9 GB RAM, 1067.9/1907.7 GB disk)\n"
+      "Setup complete  (24 CPUs, 63.9 GB RAM, 1069.0/1907.7 GB disk)\n"
      ]
     },
     {
@@ -119,9 +119,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cls_model = keras_core.saving.load_model(\"ac_ident_model_adadelta.keras\", custom_objects=None, compile=True, safe_mode=True)\n",
+    "cls_model = keras_core.saving.load_model(\"models/ac_ident_model_adadelta.keras\", custom_objects=None, compile=True, safe_mode=True)\n",
     "\n",
-    "det_model = RTDETR(model=\"runs/detect/RTDETR_3/weights/best.pt\")"
+    "det_model = RTDETR(model=\"models/rtdetr.pt\")"
    ]
   },
   {
