fixed typo in function tests notebook

--- a/technical_report_function_tests.ipynb
+++ b/technical_report_function_tests.ipynb
@@ -20,7 +20,7 @@
      "output_type": "stream",
      "text": [
       "Ultralytics YOLOv8.0.207  Python-3.11.5 torch-2.0.1+cu118 CUDA:0 (NVIDIA GeForce RTX 4090, 24564MiB)\n",
-      "Setup complete  (24 CPUs, 63.9 GB RAM, 1069.0/1907.7 GB disk)\n"
+      "Setup complete  (24 CPUs, 63.9 GB RAM, 1072.6/1907.7 GB disk)\n"
      ]
     },
     {
@@ -162,8 +162,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "image 1/1 e:\\GA DSIF\\Capstone\\Assets\\test_imgs\\f_15.jpg: 1280x1280 1 F15, 34.0ms\n",
-      "Speed: 8.0ms preprocess, 34.0ms inference, 2.0ms postprocess per image at shape (1, 3, 1280, 1280)\n"
+      "image 1/1 e:\\GA DSIF\\Capstone\\Assets\\test_imgs\\f_15.jpg: 1280x1280 1 F15, 33.0ms\n",
+      "Speed: 7.0ms preprocess, 33.0ms inference, 1.0ms postprocess per image at shape (1, 3, 1280, 1280)\n"
      ]
     }
    ],
@@ -315,7 +315,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x27b6663a6d0>"
+       "<matplotlib.image.AxesImage at 0x1ecf451c790>"
       ]
      },
      "execution_count": 12,
@@ -372,7 +372,7 @@
     {
      "data": {
       "text/plain": [
-       "'20231125_003759'"
+       "'20231126_235919'"
       ]
      },
      "execution_count": 14,
@@ -441,7 +441,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 67ms/step\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 75ms/step\n"
      ]
     }
    ],
@@ -535,6 +535,26 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.03046875"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DPP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv(\"Assets/type_data.csv\")"
@@ -542,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +945,7 @@
        "42        YF23  20.550    13.280      16.9150"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -943,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -958,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -967,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -976,7 +996,7 @@
        "341.7724758071199"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -994,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1009,38 +1029,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1584.909723390308"
+       "1103.6660373560921"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_altitude(dst, 59, 640, y_ctr)"
+    "get_altitude(dst, 26, 640, y_ctr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tgt_alt = get_altitude(dst, 59, 640, y_ctr)"
+    "tgt_alt = get_altitude(dst, 26, 640, y_ctr)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The aircraft was set to fly at 1500 ft - the estimate is only 84 feet off which is nothing in aviation"
+    "## The aircraft was set to fly at 1103 ft - the estimate is only 103 feet off which is nothing in aviation"
    ]
   },
   {
@@ -1059,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1083,7 +1103,7 @@
        "184.0096297779252"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1094,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1110,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1123,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1152,7 @@
        "51.07006855010986"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1143,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1159,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1174,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1187,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1198,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1207,7 +1227,7 @@
        "13.591111111111111"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1218,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1227,7 +1247,7 @@
        "(13.592156214424612, 144.94771157856493)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1238,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1282,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1291,7 +1311,7 @@
        "(13.592156214424612, 144.94771157856493)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1304,16 +1324,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1584.909723390308"
+       "1103.6660373560921"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1326,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1335,7 +1355,7 @@
        "'F15'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1348,16 +1368,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x27c588ca6d0>"
+       "<matplotlib.image.AxesImage at 0x1ecf45abed0>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     },
